# pp-db

./: .hgignore  .project  .pydevproject  README.rst  runtests.py  setup.cfg  setup.py
docs/: index.rst
pp/common/db/: __init__.py  dbsetup.py  setup.py  utils.py
pp/common/db/tests/: test_dbsetup.py
pp/db/: __init__.py  backup.py  dbsetup.py  utils.py
pp/db/tests/: backup_test_db.py  test_backup.py
