[metadata]
name = pp-db
version = 1.0.0
description =  Common database utils
author =  Edward Easton, Oisin Mulvihill
author_email = opensource@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries

install_requires =
	sqlalchemy
    path.py
    python-dateutil
    transaction
    zope.sqlalchemy

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest
    pytest-cov
    mock

console_scripts =

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = build dist .hg *.egg
